update: mel cursor, find color, and input focus

--- a/themes/jinx.json
+++ b/themes/jinx.json
@@ -1882,8 +1882,8 @@
     "badge.foreground": "#fa44fb",
     "terminal.foreground": "#cccccc",
     "terminal.selectionBackground": "#ffffff40",
-    "terminalCursor.background": "#fa44fb",
-    "terminalCursor.foreground": "#ffffff",
+    "terminalCursor.background": "#000000",
+    "terminalCursor.foreground": "#efa800",
     "terminal.border": "#80808059",
     "terminal.ansiBlack": "#000000",
     "terminal.ansiBlue": "#2472c8",
