fix: color contrast in jinx theme

--- a/themes/jinx.json
+++ b/themes/jinx.json
@@ -1794,7 +1794,7 @@
     "statusBarItem.remoteForeground": "#000000",
     "titleBar.activeBackground": "#000000",
     "titleBar.activeForeground": "#475da1",
-    "titleBar.inactiveBackground": "#000000",
+    "titleBar.inactiveBackground": "#3c3c3c99",
     "titleBar.inactiveForeground": "#cccccc99",
     "titleBar.border": "#00000000",
     "menubar.selectionForeground": "#ffffff",
@@ -1882,8 +1882,8 @@
     "badge.foreground": "#fa44fb",
     "terminal.foreground": "#cccccc",
     "terminal.selectionBackground": "#ffffff40",
-    "terminalCursor.background": "#000000",
-    "terminalCursor.foreground": "#efa800",
+    "terminalCursor.background": "#fa44fb",
+    "terminalCursor.foreground": "#ffffff",
     "terminal.border": "#80808059",
     "terminal.ansiBlack": "#000000",
     "terminal.ansiBlue": "#2472c8",
